--- a/client/deliciously_front/package.json
+++ b/client/deliciously_front/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.13",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
